@@ -75,6 +75,7 @@
 - P4A_Field::getAsDate() now it's fully working with the jQuery::UI::datepicker with an additional ajax call to reformat the date
 - P4A_DB::getLikeOperator() and setLikeOperator() methods were added, like operator (LIKE/ILIKE) is autodetected and it's useful when you're generating a query
 - P4A_Field's autocomplete was ported to P4A_DB::getLikeOperator() thus now it should work better with different databases (eg: postgreSQL)
+- P4A_Widget::raise() method was removed
 
 2.2.3
 - a bug with P4A_Label was fixed ("for" property was erroneous with radio and file P4A_Field)
